<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAccent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginEnd="11dp"
        android:layout_marginRight="11dp">

        <LinearLayout
            android:id="@+id/create_note"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorAccent"
            android:orientation="vertical"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:weightSum="1">

            <com.estimote.indoorsdk_module.view.IndoorLocationView
                android:id="@+id/indoor_view_note_view"
                android:layout_width="match_parent"
                android:layout_height="236dp" />

            <Button
                android:id="@+id/check_note"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@color/colorButtonPrimary"
                android:onClick="viewNote"
                android:text="@string/CheckNotesButton"
                android:textSize="25dp"
                android:textAllCaps="false" />

            <TextView
                android:id="@+id/noteDetailsLbl"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/note_details_lbl"
                android:layout_marginTop="10dp"
                android:textColor="@color/gray"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/noteViewTitle"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_marginTop="10dp"
                android:textSize="20dp"
                android:focusable="false"
                android:inputType="none"
                android:text="@string/NotesViewTitleLbl" />

            <TextView
                android:id="@+id/noteDescription"
                android:layout_width="match_parent"
                android:layout_height="46dp"
                android:layout_marginTop="10dp"
                android:focusable="false"
                android:textSize="20dp"
                android:inputType="none"
                android:text="@string/noteDescriptionLbl" />

            <ImageView
                android:id="@+id/checkedImage"
                android:layout_width="258dp"
                android:layout_height="153dp"
                android:layout_marginLeft="55dp"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
                android:background="@android:color/transparent" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/rememberedButton"
                    android:layout_width="132dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="40dp"
                    android:layout_marginTop="10dp"
                    android:background="@color/colorButtonPrimary"
                    android:textSize="30dp"
                    android:textColor="@color/Remembered"
                    android:text="@string/Remembered"
                    android:onClick="noteRemembered"
                    android:textAllCaps="false" />

                <Button
                    android:id="@+id/unrememberedButton"
                    android:layout_width="132dp"
                    android:layout_marginLeft="30dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@color/colorButtonPrimary"
                    android:textSize="30dp"
                    android:textColor="@color/NotRemembered"
                    android:text="@string/NotRemembered"
                    android:onClick="noteNotRemembered"

                    android:textAllCaps="false" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</RelativeLayout>