...
        android:id="@+id/track"
        android:layout_width="@dimen/btn_width"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:onClick="goToViewPalace"
        android:textSize="25dp"
        android:text="@string/train"
        android:textAllCaps="false" />

</LinearLayout>
