...
            android:layout_marginRight="2dp"
            android:background="@android:color/transparent"
            android:onClick="goToCreateMenu"
            app:srcCompat="@drawable/createwhite"></ImageView>

        <ImageView
            android:id="@+id/train_menu"
            android:layout_width="109dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:background="@android:color/transparent"
            android:onClick="goToTrainMenu"
            app:srcCompat="@drawable/trainwhite"></ImageView>
...
